# telegram_bot_template

./: .dockerignore  .env.dist  .env.example  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: __main__.py  app.py  config.py
app/bot/handlers/: __init__.py  errors.py  inlines.py  messages.py
app/bot/misc/: appendix.py  bot_commands.py
app/bot/texts/: outer.py
app/bot/utils/: filters.py  routers.py
app/database/core/: connection.py  methods.py
app/database/models/: users.py
docker/: .dockerignore  .env.example  Dockerfile  Makefile  compose.yaml
docker/database/: tables.sql
src/: __init__.py  __main__.py  config.py  logs.py
src/bot/handlers/: __init__.py  inlines.py  messages.py
src/bot/misc/: bot_commands.py
src/bot/texts/: inner.py  outer.py
src/bot/utils/: filters.py  middlewares.py  routers.py  states.py
src/database/: text.py
src/database/core/: connection.py  functions.py  methods.py
src/database/models/: users.py
