[tool.poetry]
name = "telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["3DZHio <3dzhio@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*", from = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
asyncio = "^3.4.3"
redis = "^5.0.8"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
loguru = "^0.7.2"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
psycopg-pool = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
